# ECUAMAPS_PRO

./: .clang-format-ignore  .gitmodules  CLAUDE.md  CONTRIBUTORS  DATA_LICENSE.txt  LEGAL  NOTICE  README.md  dispatch.json  gcovr.cfg  package.json  rebrand.py  repo_pro.json
.gemini/commands/: om-review.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/skills/: om-review.md
.github/workflows/: android-beta.yaml  android-check.yaml  android-monkey.yaml  android-release.yaml  appstream-check.yaml  build-apk.yml  build-cmake-mac.yaml  build-cmake.yaml  desktop-file-check.yaml  ios-build-ipa.yaml  ios-check.yaml
.reuse/: dep5
3party/freetype/: ft2build.h
android/: CLAUDE.md  build.gradle  lint.xml  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/sdk/: build.gradle
android/sdk/src/main/cpp/: CMakeLists.txt
android/sdk/src/main/cpp/app/organicmaps/sdk/: ChoosePositionMode.cpp  DownloadResourcesLegacyActivity.cpp  Framework.cpp  Framework.hpp  LocationState.cpp  Map.cpp  MapManager.cpp  MapStyle.cpp  OrganicMaps.cpp  Router.cpp  TrackRecorder.cpp  TrafficState.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/bookmarks/data/: Bookmark.cpp  BookmarkCategory.cpp  BookmarkManager.cpp  ElevationInfo.cpp  Icon.cpp  MapObject.cpp  Metadata.cpp  PredefinedColors.cpp  Track.cpp  Track.hpp  TrackStatistics.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/core/: jni_helper.cpp  logging.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/editor/: Editor.cpp  OpeningHours.cpp  OsmOAuth.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/isolines/: IsolinesManager.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/opengl/: androidoglcontextfactory.cpp  androidoglcontextfactory.hpp
android/sdk/src/main/cpp/app/organicmaps/sdk/platform/: AndroidPlatform.cpp  GuiThread.cpp  Language.cpp  Localization.cpp  PThreadImpl.cpp  PlatformGuiThread.cpp  SocketImpl.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/routing/: CarDirection.cpp  CarDirection.hpp  JunctionInfo.hpp  LaneInfo.cpp  PedestrianDirection.cpp  PedestrianDirection.hpp  RouteMarkData.hpp  RouteMarkType.hpp  RoutePointInfo.hpp  RouteRecommendationType.hpp  RoutingInfo.hpp  RoutingOptions.cpp  TransitRouteInfo.hpp  TransitStepInfo.hpp
android/sdk/src/main/cpp/app/organicmaps/sdk/routing/roadshield/: RoadShield.cpp  RoadShield.hpp  RoadShieldInfo.cpp  RoadShieldInfo.hpp  RoadShieldType.cpp  RoadShieldType.hpp
android/sdk/src/main/cpp/app/organicmaps/sdk/search/: DisplayedCategories.cpp  SearchEngine.cpp  SearchRecents.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/settings/: MapLanguageCode.cpp  UnitLocale.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/sound/: tts.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/subway/: SubwayManager.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/util/: Config.cpp  Distance.hpp  GeoUtils.cpp  HttpClient.cpp  Language.cpp  LogsManager.cpp  NetworkPolicy.cpp  StringUtils.cpp  UiThread.cpp
android/sdk/src/main/cpp/app/organicmaps/sdk/vulkan/: android_vulkan_context_factory.cpp  android_vulkan_context_factory.hpp
cmake/: OmimHelpers.cmake
cmake/windows/: OrganicMaps.manifest
data/: CLAUDE.md  copyright.html  editor.config  faq.html  replaced_tags.txt  taginfo.json  welcome.html
data/organic_maps_emoji/: generate_font.py
data/strings/: strings.txt
dev_sandbox/: CMakeLists.txt  main.cpp
docs/: CODE_OF_CONDUCT.md  COMMIT_MESSAGES.md  COMMUNICATION.md  CONTRIBUTING.md  DCO.md  DEBUG_COMMANDS.md  EXPERIMENTAL_PUBLIC_TRANSPORT_SUPPORT.md  GOVERNANCE.md  INSTALL.md  ROADMAP.md  STYLES.md  SUBWAY_GENERATION.md  TEAMS.md  TRANSLATIONS.md
generator/: CLAUDE.md  address_enricher.hpp  feature_builder.cpp  geometry_holder.hpp  osm2type.cpp  place_processor.cpp  relation_tags.cpp  road_access_generator.cpp  water_boundary_checker.hpp
generator/generator_tests/: raw_generator_test.cpp
iphone/: upload_to_appstore.sh
iphone/Maps/: .gitignore  OMaps-Debug.entitlements  OMaps-Release.entitlements  OMaps.plist
iphone/metadata/: copyright.txt
libs/base/: thread.cpp
libs/coding/: zip_creator.cpp
libs/drape/: gl_extensions_list.cpp  gl_includes.hpp  glyph_manager.cpp  stipple_pen_resource.cpp  support_manager.cpp
libs/drape_frontend/: apply_feature_functors.cpp  my_position_controller.cpp  rule_drawer.cpp  screen_operations.cpp
libs/editor/: osm_editor.cpp  server_api.cpp  xml_feature.cpp
libs/indexer/: drules_selector.cpp  road_shields_parser.cpp  search_string_utils.cpp
libs/kml/: serdes.cpp  serdes_common.cpp  serdes_gpx.cpp
libs/map/: api_mark_point.hpp  bookmark_helpers.cpp  bookmark_manager.cpp  framework.cpp  routing_manager.cpp  search_mark.cpp
libs/platform/: connection_status_apple.mm  distance.hpp  platform_linux.cpp  platform_mac.mm  platform_win.cpp
libs/routing/: cross_mwm_connector.hpp  edge_estimator.cpp  geometry.cpp  index_graph_starter.cpp  index_graph_starter_joints.hpp  index_router.cpp  regions_router.cpp  road_access.hpp  route_weight.cpp  routing_callbacks.hpp  routing_helpers.hpp  turns_notification_manager.cpp
libs/routing_common/: bicycle_model.cpp  pedestrian_model.cpp
libs/search/: ranker.cpp  ranking_info.cpp  region_info_getter.cpp
packaging/: app.organicmaps.desktop.metainfo.xml
qt/: CMakeLists.txt  main.cpp  mainwindow.cpp
qt/qt_common/: map_widget.cpp
tools/python/: add_string.py  generate_taginfo.py  (+2 more)
(+1054 files in other folders)
